personaje and movie sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql = true
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-
 logging.level.org.hibernate.SQL=DEBUG
+
+# Swagger
+springdoc.swagger-ui.path=/api/docs
