dbmigration addes role and user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.show-sql = true
 #Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.hibernate.ddl-auto=validate  
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Swagger
 springdoc.swagger-ui.path=/api/docs
