--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/disney?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=pass
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
