--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/disney?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
 spring.datasource.username=root
-#spring.datasource.password=pass
+spring.datasource.password=root
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
@@ -11,6 +11,7 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=validate  
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 
 # Swagger
 springdoc.swagger-ui.path=/api/docs
