--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--       DATA     -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
