--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=fb50d1bc
 spring.jpa.show-sql = true
 
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto = valdiate
+spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
